--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "grab-market-react",
+  "name": "grab-market-web",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ant-design/icons": "^4.6.2",
+    "@ant-design/icons": "^4.3.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "antd": "^4.16.3",
-    "axios": "^0.21.1",
-    "dayjs": "^1.10.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "antd": "^4.9.2",
+    "axios": "^0.21.0",
+    "dayjs": "^1.9.7",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "react-scripts": "4.0.1",
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
